--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -32,22 +33,34 @@
     <!-- Compass Needle -->
     <ImageView
         android:id="@+id/compassNeedle"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="100dp"
         android:contentDescription="Compass Needle"
-        android:src="@mipmap/ic_compass"
+        app:srcCompat="@drawable/compass"
         app:layout_constraintTop_toBottomOf="@+id/mapIcon"
         app:layout_constraintBottom_toTopOf="@+id/degreeText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <!-- Degree thing -->
+    <TextView
+        android:id="@+id/degreeView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toBottomOf="@id/compassNeedle"
+        android:gravity="center"
+        android:textColor="#FFFFFF"
+        android:textSize="18dp"
+        android:text="Rotation Degree"/>
 
     <!-- Direction and Coordinates Text -->
     <TextView
         android:id="@+id/degreeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="200dp"
         android:text="298° NW\n43°4'32\ N, 89°24'43\ W\nMadison, WI\n890ft Elevation"
         android:textColor="#FFFFFF"
         android:textAlignment="center"
