--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,12 +60,12 @@
         android:id="@+id/degreeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:text="298° NW\n43°4'32\ N, 89°24'43\ W\nMadison, WI\n890ft Elevation"
+        android:layout_marginTop="10dp"
+        android:text="Fetching location..."
         android:textColor="#FFFFFF"
         android:textAlignment="center"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@+id/compassNeedle"
+        app:layout_constraintTop_toBottomOf="@+id/degreeView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
