--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -51,6 +51,8 @@
         android:layout_marginTop="23dp"
         android:layout_marginEnd="30dp"
         android:ems="10"
+        android:hint="Search Here"
+        android:textColorHint="@color/white"
         android:inputType="text"
         app:layout_constraintEnd_toStartOf="@+id/btnSetting"
         app:layout_constraintStart_toEndOf="@+id/btnHome"
