--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -43,18 +43,16 @@
         app:layout_constraintVertical_bias="0.5"
         app:srcCompat="@drawable/compass" />
 
-    <EditText
-        android:id="@+id/searchText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="30dp"
-        android:ems="10"
-        android:hint="Search Here"
-        android:textColorHint="@color/white"
-        android:inputType="text"
+    <ImageView
+        android:id="@+id/btnSearch"
+        android:layout_width="50dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="111dp"
         app:layout_constraintEnd_toStartOf="@+id/btnSetting"
         app:layout_constraintStart_toEndOf="@+id/btnHome"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_search" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
