--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -9,7 +9,7 @@
     tools:context=".SearchActivity">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/btnConfirmSearch"
         android:layout_width="69dp"
         android:layout_height="79dp"
         android:layout_marginTop="16dp"
@@ -19,7 +19,7 @@
         app:srcCompat="@android:drawable/ic_menu_search" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/btnReturn"
         android:layout_width="0dp"
         android:layout_height="78dp"
         android:layout_marginStart="16dp"
@@ -42,6 +42,6 @@
         android:ems="10"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+        app:layout_constraintStart_toEndOf="@+id/btnReturn"
+        app:layout_constraintTop_toTopOf="@+id/btnConfirmSearch" />
 </androidx.constraintlayout.widget.ConstraintLayout>
