--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -63,12 +63,12 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/modeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="21dp"
         android:layout_marginEnd="8dp"
-        android:text="Coordinate Mode"
+        android:text="Address Mode"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/searchModeSwitch"
         app:layout_constraintTop_toTopOf="parent" />
