--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -14,7 +14,7 @@
         android:layout_height="40dp"
         android:layout_margin="16dp"
         android:contentDescription="Close"
-        android:src="@mipmap/ic_close"
+        android:src="@drawable/close_icon"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -23,7 +23,8 @@
         android:id="@+id/locationServiceText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginHorizontal="5dp"
         android:text="Set location service intervals"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
@@ -36,7 +37,8 @@
         android:id="@+id/receptionAlertText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="240dp"
+        android:layout_marginLeft="5dp"
         android:text="Reception alert"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
@@ -49,8 +51,10 @@
         android:id="@+id/complexAnimationText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="340dp"
+        android:layout_marginLeft="5dp"
         android:text="Turn off Complex Animation"
+        android:paddingLeft="5dp"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
