--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,11 @@
 
     <ImageView
         android:id="@+id/btnMap"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_margin="20dp"
         android:contentDescription="Map Icon"
-        android:src="@android:drawable/ic_dialog_map"
+        android:src="@drawable/map_icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,7 +26,7 @@
         android:layout_height="50dp"
         android:layout_margin="20dp"
         android:contentDescription="Settings Icon"
-        android:src="@android:drawable/ic_menu_manage"
+        android:src="@drawable/setting_icon_v2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
