--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -11,8 +11,8 @@
     <!-- Home Icon -->
     <ImageView
         android:id="@+id/btnHome"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_margin="20dp"
         android:contentDescription="Home Icon"
         android:src="@drawable/navigation_icon"
@@ -26,7 +26,7 @@
         android:layout_height="50dp"
         android:layout_margin="20dp"
         android:contentDescription="Settings Icon"
-        android:src="@android:drawable/ic_menu_preferences"
+        android:src="@drawable/setting_icon_v2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,18 +54,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5"
-        app:srcCompat="@drawable/arrow"/>
+        app:srcCompat="@drawable/arrow_v2"/>
 
     <ImageView
         android:id="@+id/btnSearch"
-        android:layout_width="50dp"
-        android:layout_height="51dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginStart="110dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="111dp"
         app:layout_constraintEnd_toStartOf="@+id/btnSetting"
         app:layout_constraintStart_toEndOf="@+id/btnHome"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_search" />
+        app:srcCompat="@drawable/search_icon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
