--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -77,4 +77,19 @@
         app:layout_constraintEnd_toStartOf="@+id/searchModeSwitch"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <ListView
+        android:id="@+id/suggestionsList"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:padding="8dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/searchText" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
