--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,21 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Compass Needle -->
+
+    <ImageView
+        android:id="@+id/btnLog"
+        android:layout_width="66dp"
+        android:layout_height="71dp"
+        android:layout_margin="20dp"
+        android:layout_marginStart="175dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="91dp"
+        android:contentDescription="Settings Icon"
+        android:src="@android:drawable/ic_menu_recent_history"
+        app:layout_constraintEnd_toStartOf="@+id/btnSetting"
+        app:layout_constraintStart_toEndOf="@+id/btnMap"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/compassNeedle"
         android:layout_width="200dp"
